--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.scss
@@ -1,36 +1,208 @@
 @import 'styles/kep-imports';
 
-.countdown {
-  margin-bottom: 23px;
-  width: 50px;
-}
-
-.clock-count-container {
-  width: 85px;
-  height: 85px;
-  -webkit-box-shadow: 1px 2px 12px 0 rgba(31, 45, 61, 0.1);
-  box-shadow: 1px 2px 12px 0 rgba(31, 45, 61, 0.1);
-  border-radius: 50%;
+::ng-deep .wrap {
+  margin: auto;
+  height: 180px;
   display: flex;
   justify-content: center;
-  flex-direction: column;
-  border: 1px solid #e0e6ed;
-  margin: 0 0 12px 0;
-}
 
-.clock-val {
-  font-size: 45px;
-  margin-bottom: 0;
+  // Variables
+  $lato: 'Montserrat';
 
-  @include media-breakpoint-down(md) {
-    font-size: 35px;
+
+  // Countdown
+  .countdown {
+    //width: 720px;
+    margin: 0 auto;
+
+    .bloc-time {
+      float: left;
+      margin-right: 45px;
+      text-align: center;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+
+    .count-title {
+      display: block;
+      margin-bottom: 15px;
+      font: normal 0.94em $lato;
+      color: #1a1a1a;
+      text-transform: uppercase;
+    }
+
+    .figure {
+      position: relative;
+      float: left;
+      height: 110px;
+      width: 100px;
+      margin-right: 10px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .2),inset 2px 4px 0 0 rgba(255, 255, 255, .08);
+
+      @include dark-layout {
+        background-color: #15171c;
+        box-shadow: none;
+      }
+
+      @include media-breakpoint-down(md) {
+        height: 100px;
+        width: 50px;
+        margin-right: 5px;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      >span {
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        font: normal 5.94em/107px $lato;
+        font-weight: 700;
+        //color: $primary;
+
+        @include media-breakpoint-down(md) {
+          font: normal 4em/107px $lato;
+        }
+
+        @include dark-layout {
+          //color: mix(white, $primary, 30);
+        }
+      }
+
+      .top, .bottom-back {
+        &:after {
+          content: "";
+          position: absolute;
+          z-index: -1;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 100%;
+          border-bottom: 1px solid rgba(0, 0, 0, .1);
+        }
+      }
+
+      .top {
+        z-index: 3;
+        background-color: #f7f7f7;
+        transform-origin: 50% 100%;
+        -webkit-transform-origin: 50% 100%;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        transform: perspective(200px);
+
+        @include dark-layout {
+          background-color: #15171c;
+        }
+      }
+
+      .bottom {
+        z-index: 1;
+
+        &:before {
+          content: "";
+          position: absolute;
+          display: block;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 50%;
+          background-color: rgba(0, 0, 0, .02);
+        }
+      }
+
+      .bottom-back {
+        z-index: 2;
+        top: 0;
+        height: 50%;
+        overflow: hidden;
+        background-color: #f7f7f7;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+
+        @include dark-layout {
+          background-color: #15171c;
+        }
+
+        span {
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          margin: auto;
+        }
+      }
+
+      .top, .top-back {
+        height: 50%;
+        overflow: hidden;
+        backface-visibility: hidden;
+      }
+
+      .top-back {
+        z-index: 4;
+        bottom: 0;
+        background-color: #fff;
+        -webkit-transform-origin: 50% 0;
+        transform-origin: 50% 0;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        transform: perspective(200px) rotateX(180deg);
+
+        @include dark-layout {
+          background-color: #15171c;
+        }
+
+        span {
+          position: absolute;
+          top: -100%;
+          left: 0;
+          right: 0;
+          margin: auto;
+        }
+      }
+    }
   }
 }
 
-.clock-text {
-  white-space: nowrap;
-  font-size: 16px;
-  margin-bottom: 0;
-  margin-top: 16px;
-  font-weight: 400;
-}
+//.countdown {
+//  margin-bottom: 23px;
+//  width: 50px;
+//}
+//
+//.clock-count-container {
+//  width: 85px;
+//  height: 85px;
+//  -webkit-box-shadow: 1px 2px 12px 0 rgba(31, 45, 61, 0.1);
+//  box-shadow: 1px 2px 12px 0 rgba(31, 45, 61, 0.1);
+//  border-radius: 50%;
+//  display: flex;
+//  justify-content: center;
+//  flex-direction: column;
+//  border: 1px solid #e0e6ed;
+//  margin: 0 0 12px 0;
+//}
+//
+//.clock-val {
+//  font-size: 45px;
+//  margin-bottom: 0;
+//
+//  @include media-breakpoint-down(md) {
+//    font-size: 35px;
+//  }
+//}
+//
+//.clock-text {
+//  white-space: nowrap;
+//  font-size: 16px;
+//  margin-bottom: 0;
+//  margin-top: 16px;
+//  font-weight: 400;
+//}
