--- a/src/app/styles/colors/contests.scss
+++ b/src/app/styles/colors/contests.scss
@@ -35,6 +35,11 @@ $hack-it-color: #71609f;
 $sql-selector: '&[class*="SQL"]';
 $sql-color: #dc7433;
 
+$april-fools-selector: '&[class*="April"][class*="Fools"]';
+$april-fools-color1: #f5479e;
+$april-fools-color2: #fec501;
+$april-fools-color3: #37a9cd;
+
 .contests-colors {
   // Primary color
   @include define-contest-colors(
@@ -89,6 +94,24 @@ $sql-color: #dc7433;
     $background-dark: linear-gradient(to right, mix(black, $sql-color, 50), mix(black, $sql-color, 40)),
   );
 
+  // April Fools
+  @include define-contest-colors(
+    $selector: $april-fools-selector,
+    $color: mix(white, $april-fools-color1, 25),
+    $color-dark: mix(black, $april-fools-color1, 50),
+    $background-light: linear-gradient(256deg, mix(white, $april-fools-color2, 0), mix(white, $april-fools-color3, 0)),
+    $background-dark: linear-gradient(256deg, mix(black, $april-fools-color2, 50), mix(black, $april-fools-color3, 50)),
+  ) {
+    .card {
+      border: none !important;
+    }
+
+    .contest-description
+    a {
+      color: white !important;
+    }
+  }
+
   &.contest-254 {
     --bg-gradient: linear-gradient(to right, #38CCBC, #07e4cf);
     --bg: #2db3a5;
@@ -119,7 +142,7 @@ $sql-color: #dc7433;
   }
 
   &.contest-type-LessCode:not([class*="Line"]) {
-    --bg-gradient: linear-gradient(141deg, #dee7e9b9, 50%, rgba(222, 231, 233, 0.74)e9);
+    --bg-gradient: linear-gradient(141deg, #dee7e9b9, 50%, rgba(222, 231, 233, 0.74));
     --bg: #b0b5b6c4;
     --bg-light: rgba(176, 181, 182, 0.77, 0.1);
     --box-shadow: 0px 0px 5px #b0b5b6c4;
@@ -243,7 +266,7 @@ $sql-color: #dc7433;
     color: var(--text-color);
   }
 
-  .text-primary {
+  .text-primary, .text-contest {
     color: var(--bg) !important;
   }
 
