[UPDATE] contests standings

--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
@@ -13,7 +13,7 @@
   </div>
   <contest-standings-countdown [contest]="contest"></contest-standings-countdown>
 
-  <kep-table [loading]="isLoading" [empty]="contestants.length == 0">
+  <kep-table [loading]="isLoading && contestants.length == 0" [empty]="contestants.length == 0">
     <ng-container header>
       <tr>
         <th class="text-center">#</th>
