[UPDATE] contest standings

--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.html
@@ -1,7 +1,7 @@
 @if (contest.status == ContestStatus.ALREADY) {
-  <h4 class="text-center ml-1 mb-2">
-    {{ 'CONTESTS.CONTEST_ENDS' | translate }}
-  </h4>
+<!--  <h4 class="text-center ml-1 mb-2">-->
+<!--    {{ 'CONTESTS.CONTEST_ENDS' | translate }}-->
+<!--  </h4>-->
 } @else if (contest.status == ContestStatus.NOT_STARTED) {
   <h4 class="text-center ml-1 mb-2">
     {{ 'CONTESTS.CONTEST_STARTS' | translate }}
