--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
@@ -5,7 +5,7 @@
     <div class="d-flex align-items-center">
       <kep-icon class="mr-50" name="contest" size="large-1" type="duotone"/>
       <a [routerLink]="Resources.Contest | resourceById:contest.id">
-        <h2 class="mt-2 mb-2 text-dark text-center">
+        <h2 class="my-1 text-dark text-center">
           {{ contest.title }}
         </h2>
       </a>
