--- a/src/app/modules/problems/components/attempts-table/attempts-table.component.html
+++ b/src/app/modules/problems/components/attempts-table/attempts-table.component.html
@@ -120,14 +120,9 @@
   </div>
 </ng-template>
 
-<!--<audio-->
-<!--  #successAudio-->
-<!--  src="assets/audio/success/{{ successSoundName }}.mp3">-->
-<!--</audio>-->
-
 <audio
-    #successAudio
-    src="assets/audio/success/Rick%20Roll.mp3">
+  #successAudio
+  src="assets/audio/success/{{ successSoundName }}.mp3">
 </audio>
 
 <audio
