--- a/src/@core/components/core-menu/horizontal/item/item.component.html
+++ b/src/@core/components/core-menu/horizontal/item/item.component.html
@@ -24,9 +24,9 @@
   <ng-template #itemContent>
     <kep-icon class="font-medium-4 text-primary mr-50" type="duotone" [name]="item.icon"></kep-icon>
     <span>{{ item.translate | translate }}</span>
-    @if (item.id == 'arena' || item.id == 'contests') {
+    @if (item.newCount) {
       <span class="badge ml-25 new-events-count badge-pill badge-primary">
-        {{ 1 }}
+        {{ item.newCount }}
       </span>
     }
   </ng-template>
