--- a/src/@core/components/core-menu/vertical/item/item.component.html
+++ b/src/@core/components/core-menu/vertical/item/item.component.html
@@ -27,9 +27,9 @@
     }
     <kep-icon class="font-large-1 text-primary" type="duotone" [name]="item.icon"></kep-icon>
     <span class="menu-title text-truncate">{{ item.translate | translate }}</span>
-    @if (item.id == 'arena' || item.id == 'contests') {
-      <span style="transition: 0.5s ease;" class="badge ml-1 new-events badge-pill badge-primary">
-        {{ 1 }}
+    @if (item.newCount) {
+      <span class="badge ml-25 new-events-count badge-pill badge-primary">
+        {{ item.newCount }}
       </span>
     }
   </ng-template>
